[gd_scene load_steps=2 format=2]

[ext_resource path="res://Node2D.gd" type="Script" id=1]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Lista Preenchida" type="Button" parent="."]
margin_left = 428.0
margin_top = 81.0
margin_right = 587.0
margin_bottom = 143.0
text = "Lista Preenchida"

[node name="Valor" type="Button" parent="."]
margin_left = 435.0
margin_top = 458.0
margin_right = 594.0
margin_bottom = 520.0
rect_pivot_offset = Vector2( 33, 35 )
text = "Valor"

[node name="Texto" type="Button" parent="."]
margin_left = 433.0
margin_top = 332.0
margin_right = 592.0
margin_bottom = 394.0
text = "Texto"

[node name="Lista Vazia" type="Button" parent="."]
margin_left = 429.0
margin_top = 204.0
margin_right = 588.0
margin_bottom = 266.0
text = "Lista Vazia"

[node name="Lista_Preenchida" type="Label" parent="."]
margin_left = 698.0
margin_top = 81.0
margin_right = 885.0
margin_bottom = 137.0
text = "Lista Preenchida"
align = 1
valign = 1

[node name="Lista_Vazia" type="Label" parent="."]
margin_left = 714.0
margin_top = 207.0
margin_right = 872.0
margin_bottom = 265.0
text = "Lista Vazia"
align = 1
valign = 1

[node name="Texto2" type="Label" parent="."]
margin_left = 709.0
margin_top = 328.0
margin_right = 870.0
margin_bottom = 390.0
text = "Texto"
align = 1
valign = 1

[node name="Valor2" type="Label" parent="."]
margin_left = 715.0
margin_top = 458.0
margin_right = 874.0
margin_bottom = 516.0
text = "Valor"
align = 1
valign = 1

[node name="insira1" type="LineEdit" parent="."]
margin_left = 133.0
margin_top = 205.0
margin_right = 320.0
margin_bottom = 265.0
align = 1

[node name="insira3" type="LineEdit" parent="."]
margin_left = 134.0
margin_top = 460.0
margin_right = 321.0
margin_bottom = 520.0
align = 1

[node name="Label1" type="Label" parent="."]
margin_left = 144.0
margin_top = 154.0
margin_right = 312.0
margin_bottom = 206.0
text = "Insira elementos"
align = 1
valign = 1

[node name="Label3" type="Label" parent="."]
margin_left = 146.0
margin_top = 409.0
margin_right = 314.0
margin_bottom = 461.0
text = "Insira um valor"
align = 1
valign = 1

[connection signal="pressed" from="Lista Preenchida" to="." method="_on_Lista_Preenchida_pressed"]
[connection signal="pressed" from="Valor" to="." method="_on_Valor_pressed"]
[connection signal="pressed" from="Texto" to="." method="_on_Texto_pressed"]
[connection signal="pressed" from="Lista Vazia" to="." method="_on_Lista_Vzia_pressed"]
